devel
-----

* Fix Pregel running on OneShard deployments

* BTS-1544: The _system database now properly reports its sharding value.

* Fixed AQL WINDOW statement for OneShard databases: Whenever WINDOW is used
  in the row based variant like (e.g. WINDOW { preceding: 1, following: 1 })
  it errored with:  mandatory variable "inVariable" not found. This variable
  is now correctly treated as optional.

* Fixed AQL WINDOW statement for OneShard databases: Whenever WINDOW is used
  on a OneShardDatabase, or on data from a collection that only has one shard,
  the preceding and following clauses were flipped.

* Updated arangosync to v2.19.3.

* FE-94: Support for query options and optimizer rules on web UI.

* FE-308: Support for graph editing on web UI.

* FE-313: Add support for minHash analyzers & offset field on web UI.

* Prevent potential buffer overflow in the crash handler.

* Improve crash handler by adding the state of the application server (e.g.
  startup, running, shutting dow) into the crash message.

* Updated OpenSSL to 3.1.2 and OpenLDAP to 2.6.6.

* Updated arangosync to v2.19.2.

* Updated ArangoDB Starter to 0.17.0.

* Updated arangosync to v2.19.1.

* Updated arangosync to v2.19.0.

* Remove long-deprecated graph compatibility functions, which were implemented
  as JavaScript user-defined AQL functions since ArangoDB 3.0:

  - arangodb::GRAPH_EDGES(...)
  - arangodb::GRAPH_VERTICES(...)
  - arangodb::GRAPH_NEIGHBORS(...)
  - arangodb::GRAPH_COMMON_NEIGHBORS(...)
  - arangodb::GRAPH_COMMON_PROPERTIES(...)
  - arangodb::GRAPH_PATHS(...)
  - arangodb::GRAPH_SHORTEST_PATH(...)
  - arangodb::GRAPH_DISTANCE_TO(...)
  - arangodb::GRAPH_ABSOLUTE_ECCENTRICTIY(...)
  - arangodb::GRAPH_ECCENTRICTIY(...)
  - arangodb::GRAPH_ABSOLUTE_CLOSENESS(...)
  - arangodb::GRAPH_CLOSENESS(...)
  - arangodb::GRAPH_ABSOLUTE_BETWEENNESS(...)
  - arangodb::GRAPH_BETWEENNESS(...)
  - arangodb::GRAPH_RADIUS(...)
  - arangodb::GRAPH_DIAMETER(...)
